# rendiation

./: .gitignore  Cargo.toml  README.md  STEP_ENTITY_AUDIT.md  clippy.toml  development-guide.md  my_header.h  rust-toolchain.toml  rustfmt.toml  viewer_app_init_config.toml  viewer_init_config.json  viewer_init_config.toml
algebra/: Cargo.toml
algebra/src/: array.rs  lib.rs  matrix.rs  point.rs  rotation.rs  row_view.rs  space.rs
algebra/src/matrix/: common.rs  create.rs  lu.rs  mint_impl.rs  mod.rs  operators.rs  serde_impl.rs
algebra/src/test/: mod.rs
algebra/src/vector/: common.rs  create.rs  mint.rs  mod.rs  operators.rs  serde_impl.rs  swizzle.rs
algebra/tests/: macro_tests.rs  serde_tests.rs
application/placeholder/: Cargo.toml
application/placeholder/src/: lib.rs
application/viewer/: Cargo.toml  README.md
application/viewer-content/: Cargo.toml
application/viewer-content-api/: Cargo.toml  README.md  bindings.h  build.rs  cbindgen.toml  my_header.h
application/viewer-content-api-trace-info/: Cargo.toml
application/viewer-content-api-trace-info/src/: lib.rs
application/viewer-content-api/src/: bbox.rs  cx.rs  lib.rs  panic_hook.rs  top_most_standalone_draw.rs  trace.rs  viewer_api.rs
application/viewer-content/src/: background.rs  bounding.rs  data_source.rs  egui_helper.rs  gpu_picker.rs  gpu_with_surface.rs  init_config.rs  lib.rs  pick.rs  rendering_root.rs  selection_states.rs  terminal.rs  util.rs  view_dependent_transform.rs  viewer.rs  viewport.rs
application/viewer/src/: app.rs  app_loop.rs  db_egui_view.rs  default_scene.rs  egui_cx.rs  egui_db.rs  hooks.rs  main.rs  ui.rs  util.rs
components/canvas/: Cargo.toml
components/canvas/core/: Cargo.toml
components/canvas/gpu/: Cargo.toml
components/canvas/src/: lib.rs  style.rs
components/fontext/: Cargo.toml
components/fontext/src/: fonts.rs  lib.rs
ecscene/: Cargo.toml  README.md
ecscene/src/: hierarchy.rs  lib.rs  lib_design.rs  update.rs
ecscene/src/design/: hierarchy.rs  mod.rs
geometry/: Cargo.toml
interphaser/: Cargo.toml
interphaser/src/: ability.rs  animation.rs  app.rs  cell.rs  events.rs  fonts.rs  layout.rs  lens.rs  lib.rs  memo.rs  perf.rs  rendering.rs  structure.rs  window.rs
interphaser/src/components/: canvas.rs  mod.rs  text.rs  text_editable.rs
interphaser/src/composer/: ability.rs  animation.rs  array.rs  cell.rs  events.rs  if_changed.rs  lens.rs  memo.rs  mod.rs  nest.rs  structure.rs  update.rs
interphaser/src/core/: event.rs  inc.rs  mod.rs
mesh-buffer/: Cargo.toml
mesh-buffer/src/: lib.rs  range.rs  vertex.rs
nyxt-viewer/: Cargo.toml  README.md
nyxt-viewer/src/: geometry.rs  lib.rs  scene.rs  ubo.rs
nyxt-viewer/web/: declare.ts  index.html  index.ts
rainray/: .gitignore  Cargo.toml  README.md
rainray/examples/: ball.rs  ball_array.rs  bunny.rs
rainray/src/: background.rs  bvh.rs  camera.rs  environment.rs  frame.rs  integrator.rs  lib.rs  light.rs  main.rs  material.rs  math.rs  model.rs  pixel_sampler.rs  ray.rs  renderer.rs  sampler.rs  scene.rs
render-graph/: Cargo.toml
render-graph/src/: api-degisn.rs  api.rs  backend.rs  content_pool.rs  executor.rs  graph.rs  lib.rs  node.rs  nodes.rs  quad.rs  target_pool.rs
rendiation/: Cargo.toml
rendiation/src/: application.rs  component.rs  element.rs  geometry.rs  geometry_primitive.rs  image_data.rs  lib.rs  main.rs  none_indexed_geometry.rs  render_target.rs  scene.rs  texture.rs  vertex.rs  viewport.rs  window.rs
rendium/: Cargo.toml  README.md
rendium/src/: application.rs  component.rs  data.rs  element.rs  event.rs  index_container.rs  lib.rs  quad.frag  renderer.rs  t.rs  t2.rs  window.rs  window_state.rs
rinecraft/: Cargo.toml  README.md
rinecraft/src/: camera.rs  camera_controls.rs  effect.rs  event.rs  geometry.rs  image_data.rs  init.rs  main.rs  player.rs  rendering.rs  rinecraft.rs  shader.vert  shading.rs  test_renderer.rs  texture.rs  util.rs  vertex.rs  watch.rs  window_states.rs
rivermesh/: Cargo.toml  README.md
rivermesh/src/: half_edge_mesh.rs  lib.rs  main.rs
scene/: Cargo.toml  README.md
scene-graph/: Cargo.toml  README.md
scene-graph/src/: lib.rs  utils.rs
scene-graph/web/: bench-matrix-multi.ts  index.html  index.ts  scene.ts  webpack.config.js
scene/core/: Cargo.toml  README.md
scene/core-next/: Cargo.toml
scene/fusion/: Cargo.toml
scene/geometry-query/: Cargo.toml
scene/interaction/: Cargo.toml
scene/optimization/: Cargo.toml
scene/raytracing/: Cargo.toml
scene/render-entity/: Cargo.toml
scene/src/: lib.rs  node.rs  util.rs
scene/webgpu/: Cargo.toml
sceno/: Cargo.toml
sceno/src/: background.rs  lib.rs  mesh.rs  node.rs  scene.rs
shader-graph/: Cargo.toml  README.md
shader-graph/src/: api_demo.rs  backend.rs  code_builder.rs  code_gen.rs  lib.rs  meta.rs  nodes.rs  operator.rs  provider.rs  shader_function.rs  swizzle.rs  traits_impl.rs  util.rs  webgl.rs  webgpu.rs
shader-library/: Cargo.toml  README.md
shader-library/examples/: block.rs
shader-library/src/: fog.rs  lib.rs  sph.rs  tone_mapping.rs  transform.rs
space-indexer/: Cargo.toml
space-indexer/benches/: bvh.rs
space-indexer/src/: lib.rs  utils.rs
viewer/: Cargo.toml
viewer/src/: app.rs  camera.rs  lib.rs  main.rs  renderer.rs  ui_impl.rs
viewer/wasm/: README.md  build.sh  index.html
voxland/: Cargo.toml  README.md
voxland/app/: Cargo.toml
voxland/assets/: meta.json
voxland/src/: application.rs  camera.rs  camera_controls.rs  init.rs  main.rs  rendering.rs  util.rs  voxland.rs
voxland/vox-engine/: Cargo.toml
webgl/: Cargo.toml
webgl/src/: attribute.rs  lib.rs  program.rs  ral.rs  renderer.rs  texture.rs  texture_slots.rs  ubo.rs  uniform.rs  uniform_value.rs
webgpu/: Cargo.toml  README.md
webgpu/src/: bindgroup.rs  binding.rs  buffer.rs  bundle.rs  cache.rs  consts.rs  device.rs  encoder.rs  lib.rs  mipmap_gen.rs  pass.rs  pipeline.rs  queue.rs  ral.rs  read.rs  render_target.rs  renderer.rs  rendering.rs  sampler.rs  shadergraph_impl.rs  surface.rs  swap_chain.rs  texture.rs  types.rs  uniform.rs
(+3112 files in other folders)
