[package]
name = "rendiation-algebra"
version = "0.0.1"
edition = "2018"


keywords = [ "linear", "algebra", "matrix", "vector", "math" ]


[dependencies]
mint = { version = "0.5", optional = true }
paste = "0.1"
rand = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
smallvec = "0.6"

[features]
default = []
swizzle = []

[[test]]
name = "serde_tests"
path = "tests/serde_tests.rs"
required-features = ["serde"]

[dev-dependencies]
serde_json = "1.0"
approx = "0.3.2"

[package.metadata.docs.rs]
# No need ot clutter docs.rs with the mint converters.
features = [ "swizzle", "serde", "rand" ]