[package]
name = "rendiation-geometry"
version = "0.1.0"
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"

[features]
wgpu = ["rendiation"]

[dependencies]
rendiation-math = { path = "../math" }
rendiation-math-entity = { path = "../math-entity" }

rendiation = { path = "../rendiation", optional= true }