[package]
authors = ["MikiAlex <18516340862@163.com>"]
edition = "2021"
name = "interphaser"
version = "0.1.0"

[dependencies]
arena = {path = "../utils/arena"}
bytemuck = {version = "1.4.1", features = ["derive"]}
image = "*"
log = "0.4"
# nfd = "0.0.4"
fontext = {path = "../components/fontext"}
rendiation-canvas = {path = "../components/canvas"}
rendiation-algebra = {path = "../math/algebra"}
rendiation-color = {path = "../components/color"}
rendiation-geometry = {path = "../math/geometry"}
rendiation-renderable-mesh = {path = "../components/mesh/renderable"}
rendiation-texture = {path = "../components/texture/core"}
shadergraph = {path = "../shader/graph"}
webgpu = {package = "rendiation-webgpu", path = "../webgpu"}
winit = {version = "0.27.1"}
incremental = {path = "../utils/incremental"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
instant = "0.1.12"
wasm-bindgen-futures = "0.4.28"
web-sys = {version = "0.3.53"}
