[package]
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"
name = "rendiation-mesh-buffer"
version = "0.1.0"

[features]
webgpu = ["rendiation-webgpu"]
shader-graph = ["rendiation-shadergraph", "rendiation-shadergraph-derives"]

[dependencies]
lazy_static = "1.4.0"
soa_derive = "0.8.1"

rendiation-math = {path = "../math"}
rendiation-math-entity = {path = "../math-entity"}

rendiation-webgpu = {path = "../webgpu", optional = true}
space-indexer = {path = "../space-indexer"}

rendiation-shadergraph = {path = "../shader-graph", optional = true}
rendiation-shadergraph-derives = {path = "../shader-graph-derives", optional = true}