[package]
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"
name = "nyxt-viewer"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rendiation-math = {path = "../math"}
rendiation-math-entity = {path = "../math-entity"}
rendiation-mesh-buffer = {path = "../mesh-buffer"}
rendiation-ral = {path = "../ral"}
rendiation-render-entity = {path = "../render-entity"}
rendiation-scenegraph = {path = "../scene-graph"}

js-sys = "0.3.39"
wasm-bindgen = {version = "0.2.62"}

rendiation-webgl = {path = "../webgl"}
# rendiation-webgpu = {path = "../webgpu"}

arena = {path = "../utils/arena"}
arena-tree = {path = "../utils/arena-tree"}
