[package]
authors = ["MikiAlex <18516340862@163.com>"]
edition = "2018"
name = "rainray"
version = "0.1.0"

[dependencies]
image = "*"
indicatif = "0.15"
rand = "0.7.3"
rayon = "1.5.0"
tobj = "2.0.3"

arena-tree = {path = "../utils/arena-tree"}
rendiation-algebra = {path = "../math/algebra"}
rendiation-color = {path = "../components/color"}
rendiation-geometry = {path = "../math/geometry"}
rendiation-renderable-mesh = {path = "../components/mesh/renderable"}
space-algorithm = {path = "../components/space"}
