[package]
authors = ["MikiAlex <18516340862@163.com>"]
edition = "2021"
name = "rainray"
version = "0.1.0"

[dependencies]
image = "*"
indicatif = "0.15"
rand = "0.7.3"
rayon = "1.5.0"

arena = {path = "../utils/arena"}
arena-tree = {path = "../utils/arena-tree"}
rendiation-algebra = {path = "../math/algebra"}
rendiation-color = {path = "../components/color"}
rendiation-geometry = {path = "../math/geometry"}
rendiation-renderable-mesh = {path = "../components/mesh/renderable"}
rendiation-scene-raytracing = {path = "../scene/raytracing"}
rendiation-texture = {path = "../components/texture/core"}
