[package]
name = "rendiation-rendergraph"
version = "0.0.1"
edition = "2018"

[dependencies]
arena-graph = { path = "../utils/arena-graph" }
rendiation-math = { path = "../math" }
rendiation-render-entity = { path = "../render-entity" }
rendiation-webgpu = { path = "../webgpu", optional = true}

[features]
webgpu = ["rendiation-webgpu"]