[package]
name = "rendiation-rendergraph"
version = "0.0.1"
edition = "2018"

[dependencies]
arena-graph = { path = "../utils/arena-graph" }
rendiation-math = { path = "../math" }
rendiation-render-entity = { path = "../render-entity" }
rendiation-mesh-buffer = { path = "../mesh-buffer" }
rendiation-webgpu = { path = "../webgpu", optional = true}
rendiation-ral = {path = "../ral"}

[features]
webgpu = ["rendiation-webgpu"]