[package]
name = "rendiation"
version = "0.1.0"
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.4.0"
log = "0.4"
glsl-to-spirv = "0.1"
winit = "0.20.0-alpha4"

rendiation-math = { path = "../math" }
rendiation-util = { path = "../util" }
rendiation-math-entity = { path = "../math-entity" }
rendiation-render-entity = { path = "../render-entity" }