[package]
name = "rendiation"
version = "0.1.0"
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5.0"
glsl-to-spirv = "0.1"
generational-arena = { version = "0.2" }
lazy_static = "1.4.0"
# spec = {version= "0.16.1"}

rendiation-math = { path = "../math" }
rendiation-util = { path = "../util" }
rendiation-math-entity = { path = "../math-entity" }
rendiation-render-entity = { path = "../render-entity" }