[package]
name = "rendium"
version = "0.1.0"
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"

[dependencies]
winit = "0.22.2"
log = "0.4"
futures = "0.3"
rendiation-webgpu = { path = "../webgpu", features = ["glsl-spirv"] }
rendiation-math = { path = "../math" }
rendiation-render-entity = { path = "../render-entity" }
rendiation-mesh-buffer = { path = "../mesh-buffer", features = ["webgpu"] }
rendiation-webgpu-derives = { path = "../webgpu-derives" }
arena = { path = "../utils/arena" }
