[package]
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"
name = "rendium"
version = "0.1.0"

[dependencies]
arena = {path = "../utils/arena"}
arena-tree = {path = "../utils/arena-tree"}
futures = "0.3"
log = "0.4"
rendiation-algebra = {path = "../math/algebra"}
rendiation-geometry = {path = "../math/geometry"}
rendiation-renderable-mesh = {path = "../mesh/renderable"}
rendiation-webgpu = {path = "../ral/backend/webgpu", features = ["glsl-spirv"]}
winit = "0.22.2"
