[package]
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"
name = "rinecraft"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.7"
futures = "0.3"
image = "*"
noise = "0.6"
serde = {version = "1.0.105", features = ["derive"]}
tokio = {version = "0.2", features = ["full"]}

rendiation-math = {path = "../math"}
rendiation-math-entity = {path = "../math-entity"}
rendiation-mesh-buffer = {path = "../mesh-buffer", features = ["webgpu", "shader-graph"]}
rendiation-render-entity = {path = "../render-entity"}
rendiation-webgpu = {path = "../webgpu"}
rendium = {path = "../rendium"}

rendiation-rendergraph = {path = "../render-graph", features = ["webgpu"]}
rendiation-scenegraph = {path = "../scene-graph", features = ["webgpu"]}

once_cell = "1.4.0"
rendiation-ral = {path = "../ral"}
rendiation-shader-library = {path = "../shader-library"}
rendiation-shadergraph = {path = "../shader-graph"}
rendiation-shadergraph-derives = {path = "../shader-graph-derives"}
