[package]
name = "rivermesh"
version = "0.1.0"
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "0.1.10"
rendiation-math = { path = "../math", features = ["swizzle"]}
rendiation-math-entity = { path = "../math-entity" }