[package]
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"
name = "rivermesh"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rendiation-math = {path = "../math", features = ["swizzle"]}
rendiation-math-entity = {path = "../math-entity"}
tobj = "0.1.10"
