[package]
name = "rendiation-scenegraph"
version = "0.1.0"
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
webgpu = ["rendiation-webgpu", "rendiation-webgpu-derives", "rendiation-mesh-buffer/webgpu"]
webgl = ["rendiation-webgl"]

[dependencies]
wasm-bindgen = { version = "0.2.62" }
js-sys = "0.3.39"
arena = { path = "../utils/arena" }
rendiation-math = { path = "../math" }
rendiation-math-entity = { path = "../math-entity" }
rendiation-render-entity = { path = "../render-entity" }
rendiation-mesh-buffer = { path = "../mesh-buffer" }
rendiation-ral = { path = "../ral" }

rendiation-webgpu = { path = "../webgpu", optional = true }
rendiation-webgpu-derives = { path = "../webgpu-derives", optional = true }
rendiation-webgl = { path = "../webgl", optional = true }

arena-tree = { path = "../utils/arena-tree" }

