[package]
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"
name = "rendiation-scenegraph"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
rendergraph = ["rendiation-rendergraph"]
# webgl = ["rendiation-webgl"]
webgpu = ["rendiation-webgpu", "rendiation-mesh-buffer/webgpu"]

[dependencies]
arena = {path = "../utils/arena"}
js-sys = "0.3.39"
rendiation-math = {path = "../math"}
rendiation-math-entity = {path = "../math-entity"}
rendiation-mesh-buffer = {path = "../mesh-buffer"}
rendiation-ral = {path = "../ral"}
rendiation-render-entity = {path = "../render-entity"}
wasm-bindgen = {version = "0.2.62"}

rendiation-rendergraph = {path = "../render-graph", optional = true}
rendiation-webgl = {path = "../webgl"}
rendiation-webgpu = {path = "../webgpu", optional = true}

arena-tree = {path = "../utils/arena-tree"}
