[package]
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"
name = "rendiation-scenegraph"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
rendergraph = ["rendiation-rendergraph"]
# nyxt = ["nyxt-core"]

[dependencies]
arena = {path = "../utils/arena"}
js-sys = "0.3.45"
rendiation-math = {path = "../math"}
rendiation-math-entity = {path = "../math-entity"}
rendiation-mesh-buffer = {path = "../mesh-buffer"}
rendiation-ral = {path = "../ral/core"}
rendiation-render-entity = {path = "../render-entity"}
rendiation-derives = {path = "../derives"}
rendiation-shadergraph = {path = "../shader-graph"}
once_cell = "1.4.0"
wasm-bindgen = {version = "0.2.68"}

rendiation-rendergraph = {path = "../render-graph", optional = true}

arena-tree = {path = "../utils/arena-tree"}
