[package]
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"
name = "rendiation-scene"
version = "0.1.0"

[dependencies]
arena = {path = "../../utils/arena"}
once_cell = "1.4.0"
rendiation-algebra = {path = "../../math/algebra"}
rendiation-geometry = {path = "../../math/geometry"}
rendiation-renderable-mesh = {path = "../../mesh/renderable"}
arena-tree = {path = "../../utils/arena-tree"}
