[package]
authors = ["MikiAlex <18516340862@163.com>"]
edition = "2021"
name = "rendiation-scene"
version = "0.1.0"

[dependencies]
anymap = "0.12.1"
arena = {path = "../utils/arena"}
arena-graph = {path = "../utils/arena-graph"}
arena-tree = {path = "../utils/arena-tree"}
bytemuck = {version = "1.4.1", features = ["derive"]}
log = "0.4"
once_cell = "1.4.0"
rendiation-algebra = {path = "../math/algebra"}
rendiation-controller = {path = "../components/controller"}
rendiation-geometry = {path = "../math/geometry"}
rendiation-renderable-mesh = {path = "../components/mesh/renderable", features = ["webgpu"]}
rendiation-texture = {path = "../components/texture/core", features = ["webgpu"]}
rendiation-webgpu = {path = "../webgpu"}
shadergraph = {path = "../shader/graph"}
wgpu = "0.12.0"
winit = {version = "0.26.0"}
