[package]
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"
name = "sceno"
version = "0.1.0"

[dependencies]
arena = {path = "../utils/arena"}
arena-tree = {path = "../utils/arena-tree"}
once_cell = "1.4.0"
rendiation-algebra = {path = "../math/algebra"}
rendiation-geometry = {path = "../math/geometry"}
rendiation-renderable-mesh = {path = "../components/mesh/renderable"}
rendiation-texture = {path = "../components/texture/core"}
