[package]
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"
name = "rendiation-shader-library"
version = "0.1.0"

[features]
nyxt = ["wasm-bindgen"]
webgpu = ["rendiation-webgpu"]
webgl = ["rendiation-webgl"]

[dependencies]
once_cell = "1.4.0"
rendiation-math = {path = "../math"}
rendiation-ral = {path = "../ral"}
rendiation-shadergraph = {path = "../shader-graph"}
rendiation-shadergraph-derives = {path = "../shader-graph-derives"}

wasm-bindgen = {version = "0.2.68", optional = true}

rendiation-webgpu = {path = "../webgpu", optional = true}
rendiation-webgl = {path = "../webgl", optional = true}