[package]
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"
name = "rendiation-shader-library"
version = "0.1.0"

[features]
nyxt = ["wasm-bindgen", "nyxt-core"]
webgl = ["rendiation-webgl"]
webgpu = ["rendiation-webgpu"]

[dependencies]
once_cell = "1.4.0"
rendiation-algebra = {path = "../math/algebra"}
rendiation-derives = {path = "../derives"}
rendiation-ral = {path = "../ral/core"}
rendiation-shadergraph = {path = "../shader-graph"}

nyxt-core = {path = "../nyxt/core", optional = true}
wasm-bindgen = {version = "0.2.68", optional = true}

rendiation-webgl = {path = "../ral/backend/webgl", optional = true}
rendiation-webgpu = {path = "../ral/backend/webgpu", optional = true}
