[package]
name = "space-indexer"
version = "0.1.0"
authors = ["MikiAlex <18516340862@163.com>"]
edition = "2018"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bvh"
harness = false

[dependencies]

rendiation-math = { path = "../math" }
rendiation-math-entity = { path = "../math-entity" }

rand = {version = "0.6"}